--- a/templates/Home.html
+++ b/templates/Home.html
@@ -45,6 +45,7 @@
     {% endfor %}
 </div>
 <div id="rightbox">
+    {{message}}
     <h3>{{course_number}}</h3>
     <h4>Lectures</h4>
     <form action="AddSlot" method="POST">
