--- a/templates/Login.html
+++ b/templates/Login.html
@@ -7,9 +7,9 @@ Hello {{userdata.name}} Please Enter your Password
 <br>
 <form action="FindUser" method="POST">
     {% csrf_token %}
-    Enter username : <br> <input type="text" name="username">
+    Enter username : <br> <input type="text" name="username" required>
     <br>
-    Enter Password : <br> <input type="password" name="password">
+    Enter Password : <br> <input type="password" name="password" required>
     <br>
     <input type="submit">
 </form>
