--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA_Compatible" content="ie=edge">
         <style>
-            .table_box{
+            .lecture_box{
                 float: left;
                 width: 10%;
                 height: 50px;
                 background: white;
+                border: 2px solid black;
+                text-align: center;
+                overflow: hidden;
+                font-size: 1em;
+            }
+           .tutorial_box{
+                float: left;
+                width: 10%;
+                height: 50px;
+                background: cyan;
+                border: 2px solid black;
+                text-align: center;
+                overflow: hidden;
+                font-size: 1em;
+            } 
+            .practical_box{
+                float: left;
+                width: 10%;
+                height: 50px;
+                background: yellow;
                 border: 2px solid black;
                 text-align: center;
                 overflow: hidden;
