--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA_Compatible" content="ie=edge">
         <style>
-            .lecture_box{
+            .table_box{
                 float: left;
                 width: 10%;
                 height: 50px;
