--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
             } 
             #rightbox{ 
                 float:right; 
-                background:blue; 
+                background:yellow; 
                 width:25%;  
                 padding: 10px;
             } 
