Code cleanup for login and signUp - part 1

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<header><a href="Logout">Logout</a><br><a href="clear">CLEAR ALL</a></header>
+<header><a href="logout">Logout</a><br><a href="clear">CLEAR ALL</a></header>
 
 <form action="CourseData" method="GET">
     Enter Course Number To See Choices : <input type="text" name="course_number" placeholder="BITS F111">
