--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Time Table Visualiser </h1>
-<a href="Login">Login</a>
-<a href="SignUp">SignUp</a>
+<a href="login">Login</a>
+<a href="signUp">SignUp</a>
 
 {% endblock %}
