--- a/templates/Login.html
+++ b/templates/Login.html
@@ -5,7 +5,7 @@ Hello {{userdata.name}} Please Enter your Password
 <br>
 {{message}} 
 <br>
-<form action="FindUser" method="POST">
+<form action="login" method="POST">
     {% csrf_token %}
     Enter username : <br> <input type="text" name="username" required>
     <br>
