--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<h1>Time Table Visualiser </h1>
+{% block main %}
+
 <a href="login">Login</a>
 <a href="signUp">SignUp</a>
 
