--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<header><a href="logout">Logout</a><br><a href="clear">CLEAR ALL</a></header>
+{% block main %}
+<a href="logout">Logout</a><br>
 
 <form action="CourseData" method="GET">
     Enter Course Number To See Choices : <input type="text" name="course_number" placeholder="BITS F111">
@@ -85,6 +85,10 @@
         <button type="submit" name="course_number" value="{{course_number}}">Submit</button>
     </form>
     {% endif %}
+</div>
+
+<div>
+    <a href="clear">CLEAR ALL</a>
 </div>
 
 {% endblock %}
