--- a/templates/Login.html
+++ b/templates/Login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block main %}
 Hello {{userdata.name}} Please Enter your Password
 <br>
 {{message}} 
