--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,9 @@
 <div class="timetable_box">
     <div id="leftbox">
         <div class="table_box2">
+            
+        </div>
+        <div class="table_box2">
             M
         </div>
         <div class="table_box2">
@@ -33,6 +36,11 @@
         </div>
     </div>
     <div id="middlebox">
+        {% for i in '0123456789'|make_list %}
+        <div class="table_box">
+            {{ forloop.counter }}
+        </div>
+        {% endfor %}
         {% for userhour in userhours %}
         <div class="table_box">
             {{userhour.course}}
